--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -15,4 +15,11 @@
         </p>
         <p><a class="btn btn-default" href="Home/Buy">Buy</a></p>
     </div>
+
+
+    <div class="col-md-4">
+        <iFrame id='ifrm' src="@ViewBag.URL" height="450" width="450" scrolling="auto" frameborder="0" style="text-align: center;">
+            Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
+        </iFrame>
+    </div>
 </div>
