stylin it like homeadvisor (in progress)

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -3,22 +3,20 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">TEST Merchant</p>
+    <h1>Hosted Checkout Sample</h1>
+    <p class="lead">Sample Merchant</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Buy Stuff</h2>
+        <h2></h2>
         <p>
-            This is a great opportunity to checkout the Mercury HostedCheckout solution.
-        </p>
-        <p><a class="btn btn-default" href="Home/Buy">Buy</a></p>
+
     </div>
 
 
     <div class="col-md-4">
-        <iFrame id='ifrm' src="@ViewBag.URL" height="450" width="450" scrolling="auto" frameborder="0" style="text-align: center;">
+        <iFrame id='ifrm' src="@ViewBag.URL" height="450" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
             Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
         </iFrame>
     </div>
