--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                     <div class="caption">
                         <h4 class="pull-right">$84.99</h4>
                         <h4>
-                            <a href="#">Fourth Product</a>
+                            <a href="#">Sink Installation</a>
                         </h4>
                         <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
                         <p>Product Description</p>
