--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
     <meta name="author" content="">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/pos.css" rel="stylesheet" />
+    <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
 <body>
     <!-- Navigation -->
