mo stylin based on use cases (1)

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -27,14 +27,14 @@
 
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
+                    <img src="../../Content/img/acme.png" alt="" />
                     <div class="caption">
-                        <h4 class="pull-right">$84.99</h4>
+                        <h4 class="pull-right">$TBD</h4>
                         <h4>
-                            <a href="#">Sink Installation</a>
+                            <a href="#">Acme Windows & Doors</a>
                         </h4>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Product Description</p>
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Get Quote Now" />
+                        <p>Pay now and get 10% off!</p>
                     </div>
                     <div class="ratings">
                         <p class="pull-right">6 reviews</p>
@@ -55,10 +55,10 @@
                     <div class="caption">
                         <h4 class="pull-right">$64.99</h4>
                         <h4>
-                            <a href="#">Second Product</a>
+                            <a href="#">Precision Remodeling</a>
                         </h4>
                         <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Product Description</p>
+                        <p>Services Offered</p>
                     </div>
                     <div class="ratings">
                         <p class="pull-right">12 reviews</p>
@@ -79,7 +79,7 @@
                     <div class="caption">
                         <h4 class="pull-right">$74.99</h4>
                         <h4>
-                            <a href="#">Third Product</a>
+                            <a href="#">Bathroom Tile Work</a>
                         </h4>
                         <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
                         <p>Product Description</p>
@@ -97,53 +97,9 @@
                 </div>
             </div>
 
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$84.99</h4>
-                        <h4>
-                            <a href="#">Fourth Product</a>
-                        </h4>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Product Description</p>
-                    </div>
-                    <div class="ratings">
-                        <p class="pull-right">6 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            
 
-            <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
-                    <div class="caption">
-                        <h4 class="pull-right">$94.99</h4>
-                        <h4>
-                            <a href="#">Fifth Product</a>
-                        </h4>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Product Description</p>
-                    </div>
-                    <div class="ratings">
-                        <p class="pull-right">18 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+            
 
         </div>
 
