--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/bootstrap.css
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/bootstrap.css
@@ -4493,7 +4493,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default .navbar-link {
-  color: #777777;
+  color: #fff;
 }
 
 .navbar-default .navbar-link:hover {
@@ -4501,8 +4501,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
-  border-color: #080808;
+  background-color: #777;
+  border-color: transparent;
 }
 
 .navbar-inverse .navbar-brand {
