UI added for use case (2)

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -33,16 +33,18 @@
                         <h4>
                             <a href="#">Acme Windows & Doors</a>
                         </h4>
+                        <p>Get an estimate AND if you agree to pay now you’ll get 10% off the estimate.</p>
                         <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Get Quote Now" />
-                        <p>Pay now and get 10% off!</p>
+                        
                     </div>
+                    <hr />
                     <div class="ratings">
                         <p class="pull-right">6 reviews</p>
                         <p>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
+                            <span class="glyphicon glyphicon-star"></span>
                             <span class="glyphicon glyphicon-star-empty"></span>
                         </p>
                     </div>
@@ -51,15 +53,16 @@
 
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
+                    <img src="../../Content/img/henry.png" alt="" />
                     <div class="caption">
                         <h4 class="pull-right">$64.99</h4>
                         <h4>
-                            <a href="#">Precision Remodeling</a>
+                            <a href="#">Handyman Henry</a>
                         </h4>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Services Offered</p>
+                        <p>No job too small. Henry will clean up your unfinished honey dos.</p>
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Get Quote Now" />                        
                     </div>
+                    <hr />
                     <div class="ratings">
                         <p class="pull-right">12 reviews</p>
                         <p>
@@ -81,9 +84,10 @@
                         <h4>
                             <a href="#">Bathroom Tile Work</a>
                         </h4>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='Home/Buy';" value="Buy" />
-                        <p>Product Description</p>
+                        <p>Services Offered</p>
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Ready To Pay" />
                     </div>
+                    <hr />
                     <div class="ratings">
                         <p class="pull-right">31 reviews</p>
                         <p>
