--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
 
             <div class="col-sm-4 col-lg-4 col-md-4">
                 <div class="thumbnail">
-                    <img src="http://placehold.it/320x150" alt="">
+                    <img src="../../Content/img/two.png" alt="" />
                     <div class="caption">
                         <h4 class="pull-right">$74.99</h4>
                         <h4>
