--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -82,9 +82,9 @@
                     <div class="caption">
                         <h4 class="pull-right">$74.99</h4>
                         <h4>
-                            <a href="#">Bathroom Tile Work</a>
+                            <a href="#">Basement Flooded</a>
                         </h4>
-                        <p>Services Offered</p>
+                        <p>Kindly click the button and you can pay for that pipe that needed fixin' by Two Brothers</p>
                         <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Ready To Pay" />
                     </div>
                     <hr />
