css + jumbotron css change

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -2,13 +2,13 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Hosted Checkout Sample</h1>
+<div class="jumbotron" style="background-color:#f7901e">
+    <h1 style="color:#fff">Hosted Checkout Sample</h1>
     <p class="lead">Sample Merchant</p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" >
         <h2></h2>
         <p>
 
