--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Complete.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Complete.cshtml
@@ -22,9 +22,9 @@
 
 </script>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">TEST Merchant</p>
+<div class="jumbotron" style="background-color:#f7901e">
+    <h1 style="color:#fff">Hosted Checkout Sample - Transaction Complete</h1>
+    <p class="lead">Sample Merchant</p>
 </div>
 
 <div class="row">
