--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
@@ -1,7 +1,6 @@
 ﻿
-
 .navbar-inverse {
-  background-color: #777;
+  background-color: #fff;
   border-color: transparent;
 }
 
@@ -83,6 +82,42 @@
 .navbar-inverse .navbar-nav > .open > a:focus .caret {
   border-top-color: #ffffff;
   border-bottom-color: #ffffff;
+}
+
+header {
+    text-align: center;
+    color: rgba(0,0,0,0.5);
+    background-attachment: scroll;
+    background-image: url('img/background.png');
+    background-position: center center;
+    background-repeat: none;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+
+header .intro-text {
+    padding-top: 200px;
+    padding-bottom: 50px;
+}
+
+header .intro-text .intro-lead-in {
+    margin-bottom: 25px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    line-height: 22px;
+}
+
+header .intro-text .intro-heading {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif;weight
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 50px;
 }
 
 .btn {
