--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -2,20 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
-@*<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">TEST Merchant</p>
-</div>
+@*
+    
+*@
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Buy Stuff</h2>
-        <p>
-            This is a great opportunity to checkout the Mercury HostedCheckout solution.
-        </p>
-        <p><a class="btn btn-default" href="Home/Buy">Buy</a></p>
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="intro-text">
+            <div class="intro-lead-in">
+                <div>
+                    <div class="intro-heading"></div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>*@
+</header>
+
   <!-- Page Content -->
 <div class="container">
 
