--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
@@ -23,20 +23,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Homeadvisor Hosted Checkout Product Integration</a>
+                <a class="navbar-brand page-scroll" href="/home"><img src="../../Content/img/logo.jpg" alt="" style="width: 200px" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">Pro Finder</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Pro Reviews</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">True Cost Guide</a>
+                    </li>
+                    <li>
+                        <a href="#">Design Mine</a>
+                    </li>
+                    <li>
+                        <a href="#">My Account/Login</a>
                     </li>
                 </ul>
             </div>
