--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -2,16 +2,31 @@
     ViewBag.Title = "Buy";
 }
 
-<div class="jumbotron" style="background-color:#f7901e">
-    <h1 style="color:#fff">Hosted Checkout Sample</h1>
-    <p class="lead">Sample Merchant</p>
-</div>
 
-<div class="row">
-    <div class="col-md-4" >
-        <h2></h2>
-        <p>
+<div class="container">
 
+    <div class="col-sm-4 col-lg-6 col-md-4">
+        <div class="thumbnail">
+            <img src="../../Content/img/henry.png" alt="" />
+            <div class="caption">
+                <h4 class="pull-right">$64.99</h4>
+                <h4>
+                    <a href="#">Handyman Henry</a>
+                </h4>
+                <p>No job too small. Henry will clean up your unfinished honey dos.</p>
+            </div>
+            <hr />
+            <div class="ratings">
+                <p class="pull-right">12 reviews</p>
+                <p>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star"></span>
+                    <span class="glyphicon glyphicon-star-empty"></span>
+                </p>
+            </div>
+        </div>
     </div>
 
 
@@ -21,3 +36,4 @@
         </iFrame>
     </div>
 </div>
+
