--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/CSS.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/CSS.cshtml
@@ -1,9 +1,4 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Css";
 }
-
-<div class="jumbotron">
-    <h1>CSS</h1>
-    <p class="lead">Sample Merchant</p>
-</div>
 
