--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -5,11 +5,11 @@
 
 <div class="container">
 
-    <div class="col-sm-4 col-lg-6 col-md-4">
+    <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
             <img src="../../Content/img/henry.png" alt="" />
             <div class="caption">
-                <h4 class="pull-right">$64.99</h4>
+                <h4 class="pull-right"></h4>
                 <h4>
                     <a href="#">Handyman Henry</a>
                 </h4>
@@ -30,10 +30,10 @@
     </div>
 
 
-    <div class="col-md-4">
-        <iFrame id='ifrm' src="@ViewBag.URL" height="450" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
+    <div class="col-sm-4 col-lg-4 col-md-4">
+        <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
             Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
-        </iFrame>
+        </iframe>
     </div>
 </div>
 
