--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
         @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/pos.css" rel="stylesheet" />
     <link href="~/Content/custom.css" rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <!-- Navigation -->
