two quick fixes

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -9,7 +9,7 @@
         <div class="thumbnail">
             <img src="../../Content/img/henry.png" alt="" />
             <div class="caption">
-                <h4 class="pull-right"></h4>
+                <h4 class="pull-right">$64.99</h4>
                 <h4>
                     <a href="#">Handyman Henry</a>
                 </h4>
