--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                             <a href="#">Acme Windows & Doors</a>
                         </h4>
                         <p>Get an estimate AND if you agree to pay now you’ll get 10% off the estimate.</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Get Quote Now" />
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay Now" />
                         
                     </div>
                     <hr />
@@ -63,7 +63,7 @@
                             <a href="#">Handyman Henry</a>
                         </h4>
                         <p>No job too small. Henry will clean up your unfinished honey dos.</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Get Quote Now" />                        
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay Later" />                        
                     </div>
                     <hr />
                     <div class="ratings">
@@ -88,7 +88,7 @@
                             <a href="#">Basement Flooded</a>
                         </h4>
                         <p>Kindly click the button and you can pay for that pipe that needed fixin' by Two Brothers</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Ready To Pay" />
+                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay On-Site" />
                     </div>
                     <hr />
                     <div class="ratings">
