--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -3,105 +3,182 @@
 }
 
 @*
-    
+
 *@
 
 <!-- Header -->
-<header>
-    <div class="container">
-        <div class="intro-text">
-            <div class="intro-lead-in">
-                <div>
-                    <div class="intro-heading"></div>
+@*<header>
+        <div class="container">
+            <div class="intro-text">
+                <div class="intro-lead-in">
+                    <div>
+                        <div class="intro-heading"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>*@
 
-  <!-- Page Content -->
+<!-- Page Content -->
 <div class="container">
 
     <div class="row">
         <hr />
 
-
         <div class="row">
 
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="../../Content/img/acme.png" alt="" />
-                    <div class="caption">
-                        <h4 class="pull-right">$TBD</h4>
+
+                <div class="well">
+                    @*<img src="" alt="" />*@
+                    <div class="row">
+
                         <h4>
-                            <a href="#">Acme Windows & Doors</a>
+                            Reserve Your Tee Time Online
                         </h4>
-                        <p>Get an estimate AND if you agree to pay now you’ll get 10% off the estimate.</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay Now" />
-                        
+
+                        <p>Reserving your tee time online is easy and fast.</p>
+
+                        <div class="row col-lg-12">
+
+                            <select class="form-control">
+                                <option>Select A Date</option>
+                                <option>Today</option>
+                                <option>Tomorrow</option>
+                                <option>This Saturday</option>
+                                <option>Tuesday</option>
+                            </select>
+
+                            <select class="form-control">
+                                <option>Select A Time</option>
+                                <option>Early</option>
+                                <option>Late</option>
+                                <option>Doesn't Matter</option>
+                            </select>
+                            <br />
+                        </div>
+
+                        <div class="row col-lg-12">
+                            <div class="btn-group pull-right">
+                                <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                    <li><a ahref="#"><input type="button" style="width: 100%;"onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
-                    <hr />
-                    <div class="ratings">
-                        <p class="pull-right">6 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </p>
-                    </div>
+
                 </div>
+
             </div>
 
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="../../Content/img/henry.png" alt="" />
-                    <div class="caption">
-                        <h4 class="pull-right">$64.99</h4>
+
+                <div class="well">
+                    @*<img src="" alt="" />*@
+                    <div class="row">
+
                         <h4>
-                            <a href="#">Handyman Henry</a>
+                            Reserve Your Tee Time Online
                         </h4>
-                        <p>No job too small. Henry will clean up your unfinished honey dos.</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay Later" />                        
+
+                        <p>Reserving your tee time online is easy and fast.</p>
+
+                        <div class="row col-lg-12">
+
+                            <select class="form-control">
+                                <option>Select A Date</option>
+                                <option>Today</option>
+                                <option>Tomorrow</option>
+                                <option>This Saturday</option>
+                                <option>Tuesday</option>
+                            </select>
+
+                            <select class="form-control">
+                                <option>Select A Time</option>
+                                <option>Early</option>
+                                <option>Late</option>
+                                <option>Doesn't Matter</option>
+                            </select>
+                            <br />
+                        </div>
+
+                        <div class="row col-lg-12">
+                            <div class="btn-group pull-right">
+                                <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
-                    <hr />
-                    <div class="ratings">
-                        <p class="pull-right">12 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </p>
-                    </div>
+
                 </div>
+
             </div>
 
             <div class="col-sm-4 col-lg-4 col-md-4">
-                <div class="thumbnail">
-                    <img src="../../Content/img/two.png" alt="" />
-                    <div class="caption">
-                        <h4 class="pull-right">$74.99</h4>
+
+                <div class="well">
+                    @*<img src="" alt="" />*@
+                    <div class="row">
+
                         <h4>
-                            <a href="#">Basement Flooded</a>
+                            Get Some Balls
                         </h4>
-                        <p>Kindly click the button and you can pay for that pipe that needed fixin' by Two Brothers</p>
-                        <input type="button" class="btn btn-buy pull-right" onclick="location.href='/Home/Buy';" value="Pay On-Site" />
+
+                        <p>Get ready for the ultimate in ball service.</p>
+
+                        <div class="row col-lg-12">
+
+                            <select class="form-control">
+                                <option>Select A Driving Range Box</option>
+                                <option>Arnold Palmer</option>
+                                <option>Tiger Woods</option>
+                                <option>The Shark</option>
+                            </select>
+
+                            <select class="form-control">
+                                <option>Select A Time</option>
+                                <option>Early</option>
+                                <option>Late</option>
+                                <option>Doesn't Matter</option>
+                            </select>
+
+                            <select class="form-control">
+                                <option>Select Balls</option>
+                                <option>Small Basket</option>
+                                <option>Medium Basket</option>
+                                <option>Large Basket</option>
+                            </select>
+
+                            <br />
+                        </div>
+
+                        @*<div class="row col-lg-12">
+                            <div class="btn-group pull-right">
+                                <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                </ul>
+                            </div>
+                        </div>*@
+
+                        <div class="row col-lg-12">
+                            <div class="pull-right">
+                                <input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" />
+                            </div>
+                        </div>
+
                     </div>
-                    <hr />
-                    <div class="ratings">
-                        <p class="pull-right">31 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </p>
-                    </div>
+
                 </div>
+
             </div>
 
         </div>
@@ -109,3 +186,4 @@
     </div>
 
 </div>
+
