--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
@@ -27,25 +27,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/home"><img src="../../Content/img/logo.jpg" alt="" style="width: 200px" /></a>
+                <a class="navbar-brand page-scroll" href="/home"><img src="~/Content/img/vantiv-pro-shop-logo.png" alt="" /></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Pro Finder</a>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <a href="#">Pro Reviews</a>
-                    </li>
-                    <li>
-                        <a href="#">True Cost Guide</a>
-                    </li>
-                    <li>
-                        <a href="#">Design Mine</a>
-                    </li>
-                    <li>
-                        <a href="#">My Account/Login</a>
+                        <a href="#"></a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +51,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Mercury Developer Integrations 2015</p>
+                    <p>Copyright &copy; Vantiv 2015</p>
                 </div>
             </div>
         </footer>
