--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/bootstrap.css
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/bootstrap.css
@@ -4986,7 +4986,7 @@ a.list-group-item.active > .badge,
 
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #428bca;
+  border-color: transparent;
 }
 
 .thumbnail > img {
